RESOLVED FIXED192989
Crash in com.apple.WebKit: WebKit::WebResourceLoader::willSendRequest + 223
https://bugs.webkit.org/show_bug.cgi?id=192989
Summary Crash in com.apple.WebKit: WebKit::WebResourceLoader::willSendRequest + 223
Keith Rollin
Reported 2018-12-21 11:48:55 PST
willSendRequest is calling maybeLoadFallbackForRedirect, which can delete “this”. After that, some new logging code tries to access “this” and causes the crash. <rdar://problem/46901747>
Attachments
Patch (2.61 KB, patch)
2018-12-21 11:56 PST, Keith Rollin
no flags
Keith Rollin
Comment 1 2018-12-21 11:56:23 PST
Chris Dumez
Comment 2 2018-12-21 12:00:07 PST
Comment on attachment 357963 [details] Patch r=me
WebKit Commit Bot
Comment 3 2018-12-21 12:25:29 PST
Comment on attachment 357963 [details] Patch Clearing flags on attachment: 357963 Committed r239514: <https://trac.webkit.org/changeset/239514>
WebKit Commit Bot
Comment 4 2018-12-21 12:25:31 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.