Crash in com.apple.WebKit: WebKit::WebResourceLoader::willSendRequest + 223 https://bugs.webkit.org/show_bug.cgi?id=192989

Reviewed by Chris Dumez.

willSendRequest is calling maybeLoadFallbackForRedirect, which can
delete “this”. After that, some new logging code tries to access
“this” and causes the crash. Fix this by adjusting the scope of a
"protectedThis".

* WebProcess/Network/WebResourceLoader.cpp:
(WebKit::WebResourceLoader::willSendRequest):


Canonical link: https://commits.webkit.org/207546@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239514 268f45cc-cd09-0410-ab3c-d52691b4dbfc